adding the information about the dataset

--- a/sprint_12_project.ipynb
+++ b/sprint_12_project.ipynb
@@ -36,6 +36,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## About the dataset\n",
+    "\n",
+    "- 'Churn' - the churn rate for the month in question\n",
+    "- 'gender' - gender of the user\n",
+    "- 'Near_Location' - if the customer lives or works in the neighborhood where the gym is located\n",
+    "- 'Partner' - if the user is an employee of a partner company (the gym has partner companies whose employees get discounts; in these cases, the gym stores information about clients who are employees)\n",
+    "- 'Promo_friends' - if the customer originally signed up via a \"bring a friend\" offer they usually use the friend's promotion code when they pay for their first membership)\n",
+    "- 'Phone' - if the user provides their phone number\n",
+    "- 'age' - age of the client\n",
+    "- 'Lifetime' - the time (in months) since the client first came to the gym\n",
+    "- 'Contract_period' - 1 month, 3 months, 6 months, or one year\n",
+    "- 'Month_to_end_contract' - the remaining months until the contract expires\n",
+    "- 'Group_visits' - if the client participates in group sessions\n",
+    "- 'Avg_class_frequency_total' - average frequency of visits per week over the client's lifetime\n",
+    "- 'Avg_class_frequency_current_month' - average frequency of visits per week during the current month\n",
+    "- 'Avg_additional_charges_total' - the total amount of money spent on other gym services: coffee, sporting goods, cosmetics, massage, etc.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 1 - Download and load the data"
    ]
   },
